--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
     
     <title>URL Shortening</title>
   </head>
